@startuml

    class Car {
        -_id : String
        -_model : String
        -_brand : String
        +Car(id : String, model : String, brand : String)
        +getId() : String
        +getModel() : String
        +getBrand() : String
    }

    class CarFormatter {
        +getCarsNames(cars : List<Car>) : String
    }

    class CarRepository {
        -_carsDb : List<Car>
        +getFromDb(carId : String) : Car
        +getBestCar() : Car
    }

    
    CarRepository ..> Car 
    CarFormatter ..> Car 

@enduml
